landing page banner image and text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url(https://i.auto-bild.de/ir_img/6/8/7/1/4/5/LeFlaSys-auf-Wiesel-2-474x316-00cb49aff8ac4562.jpg);">
+  <div class="container">
+    <h1>Find your Tank</h1>
+    <p>Pimp your movie: Tanks for rent across the globe</p>
+    <a class="btn btn-flat" href="#">Find Tank</a>
+  </div>
+</div>
