components/footer und basic footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<!-- HEADER -->
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url(https://i.auto-bild.de/ir_img/6/8/7/1/4/5/LeFlaSys-auf-Wiesel-2-474x316-00cb49aff8ac4562.jpg);">
   <div class="container">
     <h1>Find your Tank</h1>
@@ -5,3 +6,19 @@
     <a class="btn btn-flat" href="#">Find Tank</a>
   </div>
 </div>
+<!-- HEADER END -->
+
+<!-- FOOTER -->
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+  </div>
+</div>
+<!-- FOOTER END -->
