change background img

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url(https://i.auto-bild.de/ir_img/6/8/7/1/4/5/LeFlaSys-auf-Wiesel-2-474x316-00cb49aff8ac4562.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1508690486351-0c22fd3005cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1953&q=80);">
   <div class="container">
     <h1>Find your Tank</h1>
     <p>Pimp your movie: Tanks for rent across the globe</p>
