--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2)), url(https://images.unsplash.com/photo-1508690486351-0c22fd3005cf?ixlib=rb-1.2.1&auto=format&fit=crop&w=1953&q=80);">
   <div class="container">
     <h1>Find your Tank</h1>
-    <p>Pimp your movie: Tanks for rent across the globe</p>
+    <p>Pimp your warcrime: Tanks for rent across the globe</p>
     <a class="btn btn-flat" href="#">Find Tank</a>
   </div>
 </div>
