--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,19 @@
 </div>
 <!-- HEADER END -->
 
+<!-- Tanks-->
+<div class="">
+  <% Tank.all.each do |tank| %>
+    <div class="tank-card">
+      <%= tank.name  %>
+      <%= tank.description  %>
+      <br>
+      <%= tank.price_per_day %> | <%= tank.price_per_day %>
+    </div>
+  <% end %>
+</div>
+
+
 <!-- FOOTER -->
 <div class="footer">
   <div class="footer-links">
