fixed the doubling

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,7 +11,7 @@
         <%= tank.name  %>
         <%= tank.description  %>
         <br>
-        <%= tank.price_per_day %> | <%= tank.price_per_day %>
+        <%= tank.price_per_day %> | <%= tank.capacity %>
       </div>
     <% end %>
   </div>
