last one, i promise

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="container">
-  <h2>Mine Bookings</h2>
+  <h2>My Bookings</h2>
   <% @bookings.each do |booking| %>
       <div class="booking-card container" >
         <p>From <%= booking.from_date  %> to <%= booking.to_date %></p>
