--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container", style="display: flex">
   <div class="container">
-    <h2>Your Tanks</h2>
+    <h2>Your <%= link_to "Tanks", tanks_path() %></h2>
     <% @tanks.each do |tank| %>
       <div class="tank-card">
         <%= tank.name  %>
