--- a/app/views/tanks/index.html.erb
+++ b/app/views/tanks/index.html.erb
@@ -5,7 +5,11 @@
     <%= tank.description  %>
     <br>
     <%= tank.price_per_day %> | <%= tank.price_per_day %>
+     <%#  <%= link_to 'Edit', edit_tanks_path(tank), class: "btn btn-outline-warning" %>
+    <%= link_to 'Delete', tanks_path(tank), class: "btn btn-outline-danger",
+      method: :delete,
+      data: { confirm: "Are you sure"} %> 
   </div>
 <% end %>
 <br>
-<%= link_to "Homepage", root_path , class: "btn btn-outline-primary" %>
+<%= link_to "Dashboard", dashboard_path , class: "btn btn-outline-primary" %>
