--- a/app/views/tanks/index.html.erb
+++ b/app/views/tanks/index.html.erb
@@ -4,12 +4,14 @@
     <%= tank.name  %>
     <%= tank.description  %>
     <br>
-    <%= tank.price_per_day %> | <%= tank.price_per_day %>
-     <%#  <%= link_to 'Edit', edit_tanks_path(tank), class: "btn btn-outline-warning" %>
-    <%= link_to 'Delete', tanks_path(tank), class: "btn btn-outline-danger",
+    <%= tank.price_per_day %> | <%= tank.capacity %>
+    <%= link_to 'Edit', edit_tank_path(tank), class: "btn btn-outline-warning" %>
+    <%= link_to 'Delete', tank_path(tank), class: "btn btn-outline-danger",
       method: :delete,
       data: { confirm: "Are you sure"} %> 
   </div>
 <% end %>
+<br>
+<%= link_to "New Tank", new_tank_path(@tank), class: "btn btn-outline-success"  %>
 <br>
 <%= link_to "Dashboard", dashboard_path , class: "btn btn-outline-primary" %>
