--- a/app/views/tanks/show.html.erb
+++ b/app/views/tanks/show.html.erb
@@ -1,17 +1,20 @@
-<h1>You tanks</h1>
 <div class="">
-  <% Tank.all.each do |tank| %>
+
     <div class="tank-card">
-      <%= tank.name  %>
-      <%= tank.description  %>
+      <%= @tank.name  %>
+      <%= @tank.description  %>
       <br>
-      <%= tank.price_per_day %>
-      <%= tank.weight_in_kg %>
-      <%= tank.manufacturer %>
-      <%= tank.capacity %>
+      <%= @tank.price_per_day %>
+      <%= @tank.weight_in_kg %>
+      <%= @tank.manufacturer %>
+      <%= @tank.capacity %>
     </div>
-    <% tank.photos.each do |photo| %>
+    <% @tank.photos.each do |photo| %>
       <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
     <% end %>
-  <% end %>
 </div>
+<%= link_to 'Edit', edit_tank_path(@tank), class: "btn btn-outline-warning" %>
+<%= link_to 'Delete', tank_path(@tank), class: "btn btn-outline-danger",
+      method: :delete,
+      data: { confirm: "Are you sure"} %>
+
