--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,25 +9,35 @@
 <!-- HEADER END -->
 
 <!-- Tanks-->
-<div class="">
-  <% Tank.all.each do |tank| %>
-    <div class="card-tank">
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-        <div class="card-tank-infos">
-          <div class="card-tank-headers">
-            <p>MODEL</p>
-            <p>CAPACITY</p>
-            <p>price/day</p>
+<div class="px-5 pt-5">
+  <div class="row px-5 pb-5 justify-content-around">
+    <% Tank.all.each do |tank| %>
+      <div class="pb-5">
+        <div class="col-12 col-xl-3 col-lg-4 clo-md-6">
+          <div class="card-tank">
+            <% if tank.photos.present? %>
+              <%= cl_image_tag tank.photos.first.key, height: 300, width: 400, crop: :fill %>
+            <% else %>
+              <%= cl_image_tag 'tank1_xkesh5', height: 300, width: 400, crop: :fill %>
+            <% end %>
+              <div class="card-tank-infos">
+                <div class="card-tank-headers">
+                  <p>MODEL</p>
+                  <p>CAPACITY</p>
+                  <p>price/day</p>
+                </div>
+                <div class="card-tank-values">
+                  <p><%= tank.name  %></p>
+                  <p><%= tank.capacity %></p>
+                  <h2 class="card-tank-pricing"><%= tank.price_per_day %>€</h2>
+                </div>
+              <br>
+            </div>
           </div>
-          <div class="card-tank-values">
-            <p><%= tank.name  %></p>
-            <p><%= tank.capacity %></p>
-            <h2 class="card-tank-pricing"><%= tank.price_per_day %>€</h2>
-          </div>
-        <br>
+        </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
 
 
