view for new booking + link from homepage to show tank

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,6 +16,7 @@
       <%= tank.description  %>
       <br>
       <%= tank.price_per_day %> | <%= tank.capacity %>
+      <%= link_to 'Look at this tank', tank_path(tank), class: "btn btn-outline-warning" %>
     </div>
   <% end %>
 </div>
