--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 <!-- HEADER END -->
-
+<%= render "search", tanks: @tanks %>
 <!-- Tanks-->
 <div class="px-5 pt-5">
   <div class="row px-5 pb-5 justify-content-around">
