--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,7 +52,7 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+    If you have a big <i class="fas fa-heart"></i> visit <%= link_to "/", class: "navbar-brand" do %> long-term-giving<% end %>
   </div>
 </div>
 <!-- FOOTER END -->
