--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -28,7 +28,7 @@
         <p>Total Price: <%= (booking.tank.price_per_day * total_days).to_i  %> €</p>
         <h3><%= booking.booking_status %></h3>
          <% if booking.booking_status == "Canceled" %>
-          <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger",
+          <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger",
               method: :delete,
               data: { confirm: "Are you sure"} %>
          <% else %>
@@ -53,12 +53,22 @@
      <p>For <%= total_days.to_i %> Days and <%= (booking.tank.price_per_day * total_days).to_i %> €</p>
      <p>Between <%= booking.from_date  %> and <%= booking.to_date  %></p>
      <p><%= booking.booking_status  %></p>
-          <%= link_to 'Accept', booking_path(booking, booking_status: "accepted"), class: "btn btn-success",
-          method: :patch,
-          data: { confirm: "Are you sure"} %>
-          <%= link_to 'Decline', booking_path(booking, booking_status: "declined"), class: "btn btn-danger",
-          method: :patch,
-          data: { confirm: "Are you sure"} %>
+     <% if booking.booking_status == "in Review" %>
+        <%= link_to 'Accept', booking_path(booking, booking_status: "Accepted"), class: "btn btn-success",
+        method: :patch,
+        data: { confirm: "Are you sure"} %>
+        <%= link_to 'Decline', booking_path(booking, booking_status: "Declined"), class: "btn btn-danger",
+        method: :patch,
+        data: { confirm: "Are you sure"} %>
+      <% elsif booking.booking_status == "Accepted" %>
+        <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger",
+        method: :patch,
+        data: { confirm: "Are you sure"} %>
+      <% else %>
+        <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger",
+        method: :delete,
+        data: { confirm: "Are you sure"} %>
+      <% end %>
     </div>
   <% end %>
   </div>
