hiding button on tank#show depending on current_user

--- a/app/views/tanks/show.html.erb
+++ b/app/views/tanks/show.html.erb
@@ -13,10 +13,13 @@
       <%= cl_image_tag photo.key, height: 300, width: 400, crop: :fill %>
     <% end %>
 </div>
-<%= link_to 'Edit', edit_tank_path(@tank), class: "btn btn-outline-warning" %>
-<%= link_to 'Delete', tank_path(@tank), class: "btn btn-outline-danger",
-      method: :delete,
-      data: { confirm: "Are you sure"} %>
-<%= link_to 'Book this tank', new_tank_booking_path(@tank), class: "btn btn-outline-warning" %>
+  <% if @tank.user == current_user %>
+    <%= link_to 'Edit', edit_tank_path(@tank), class: "btn btn-outline-warning" %>
+    <%= link_to 'Delete', tank_path(@tank), class: "btn btn-outline-danger",
+          method: :delete,
+          data: { confirm: "Are you sure"} %>
+  <% else %>
+    <%= link_to 'Book this tank', new_tank_booking_path(@tank), class: "btn btn-outline-warning" %>
+  <% end %>
 
 
