--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
   height: 780px;
 }
 
-.banner h1 {
+.banner .container > h1 {
   margin: 0;
   color: white;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
@@ -14,9 +14,14 @@
   font-weight: bold;
 }
 
-.banner p {
+.banner .container > p {
   font-size: 20px;
   color: white;
-  opacity: .7;
+  opacity: .8;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
+
+.banner > img {
+  opacity: 0.5;
+}
+
