--- a/app/views/pages/_search.html.erb
+++ b/app/views/pages/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag tanks_path, method: :get do %>
+<%= simple_form_for tanks_path, method: :get do %>
   <%= text_field_tag :query,
     params[:query],
     class: "form-control",
@@ -6,3 +6,8 @@
   %>
   <%= submit_tag "Search", class: "btn btn-primary" %>
 <% end %>
+
+<%#= simple_form_for :search, url: tank_path, method: "GET", html: { class: 'form-inline' } do |f| %>
+  <%#= f.input :name, input_html: {value: ""} %>
+  <%#= f.submit "Search", class: "btn btn-primary" %>
+<%# end %>
