--- a/app/assets/stylesheets/components/_card_tank.scss
+++ b/app/assets/stylesheets/components/_card_tank.scss
@@ -29,12 +29,20 @@
 
 .card-tank .card-tank-infos {
   padding: 0 16px;
-
 }
 
-.text-align-center {
-  text-align: center;
+.card-tank-headers {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 4px;
 }
+
+.card-tank-values {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 0;
+}
+
 // .card-tank-infos .card-tank-user {
 //   position: absolute;
 //   right: 16px;
