--- a/app/views/your_tanks/index.html.erb
+++ b/app/views/your_tanks/index.html.erb
@@ -6,7 +6,7 @@
     <br>
     <%= tank.price_per_day %> | <%= tank.capacity %>
     <%= link_to 'Edit', edit_tank_path(tank), class: "btn btn-outline-warning" %>
-    <%= link_to 'Delete', tank_path(tank), class: "btn btn-outline-danger",
+    <%= link_to 'Delete', your_tank_path(tank), class: "btn btn-outline-danger",
       method: :delete,
       data: { confirm: "Are you sure"} %> 
   </div>
