--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
           <%= link_to "Dashboard", "/dashboard", class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "My Tanks", "your_tanks#index", class: "nav-link" %>
+          <%= link_to "My Tanks", your_tanks_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
