--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,11 +1,12 @@
 .footer {
-  background: #F4F4F4;
+  background:#6ea171;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
+  height: 80px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  font-size: 27px;
 }
 .footer-links {
   display: flex;
@@ -15,7 +16,7 @@
   color: black;
   opacity: 0.15;
   text-decoration: none;
-  font-size: 24px;
+  font-size: 27px;
   padding: 0px 10px;
 }
 .footer-links a:hover {
@@ -23,4 +24,16 @@
 }
 .footer .fa-heart {
   color: #D23333;
+}
+.long-term-giving {  
+  text-decoration: none;
+  color: black;
+  opacity: 0.5;
+  font-size: 27px;
+}
+
+.long-term-giving:hover {
+  text-decoration: none;
+  color: black;
+  opacity: 1;
 }
