--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,7 +53,7 @@
       <a href="#"><i class="fab fa-linkedin"></i></a>
     </div>
     <div class="footer-copyright">
-      If you have a big <i class="fas fa-heart"></i> visit <%= link_to "/", class: "navbar-brand" do %> long-term-giving<% end %>
+      If you have a big <i class="fas fa-heart"></i> visit <a class="long-term-giving" href="#">long-term-giving</a>
     </div>
   </div>
 <!-- FOOTER END -->
