--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -22,15 +22,15 @@
     <% @bookings.each do |booking| %>
       <div class="card mb-3" style="max-width: 780px;">
         <div class="row bg-light">
-          <div class="col-lg-6 col-xl-6 pl-0">
+          <div class="col-lg-12 col-xl-6 pl-0 pr-0">
             <% if booking.tank.photos.present? %>
               <%= cl_image_tag booking.tank.photos.first.key, height: 300, width: 300, crop: :fill%>
             <% else %>
               <%= cl_image_tag 'tank1_xkesh5', height: 300, width: 300, crop: :fill %>
             <% end %>
           </div>
-          <div class="col-lg-7 col-xl-6">
-            <div class="card-body">
+          
+            <div class="card-body col-lg-12 col-xl-6 mt-3">
               <h3 class="card-title">
                 From <%= booking.from_date  %> to <%= booking.to_date %>
               </h3>
@@ -44,20 +44,26 @@
                 <p class="card-text">
                   Total Price: <%= (booking.tank.price_per_day * total_days).to_i  %> €
                 </p>
-                <h3>
-                  <%= booking.booking_status %>
-                </h3>
-                <% if booking.booking_status == "Canceled" %>
-                  <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger",
-                    method: :delete,
-                    data: { confirm: "Are you sure"} %>
-                <% else %>
-                <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger",
-                  method: :patch,
-                  data: { confirm: "Are you sure"} %>
-                <% end %>
+                <div class="row">
+                  <div class="col-5">
+                    <h3>
+                      <%= booking.booking_status %>
+                    </h3>
+                  </div>
+                  <div class="col-7">
+                    <% if booking.booking_status == "Canceled" %>
+                      <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger btn-lg",
+                        method: :delete,
+                        data: { confirm: "Are you sure"} %>
+                    <% else %>
+                    <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger btn-lg",
+                      method: :patch,
+                      data: { confirm: "Are you sure"} %>
+                    <% end %>
+                  </div>
+                </div>
             </div>
-          </div>
+          
         </div>
       </div>
    <% end %>
@@ -78,18 +84,18 @@
      <p>Between <%= booking.from_date  %> and <%= booking.to_date  %></p>
      <p><%= booking.booking_status  %></p>
      <% if booking.booking_status == "in Review" %>
-        <%= link_to 'Accept', booking_path(booking, booking_status: "Accepted"), class: "btn btn-success",
+        <%= link_to 'Accept', booking_path(booking, booking_status: "Accepted"), class: "btn btn-success btn-lg",
         method: :patch,
         data: { confirm: "Are you sure"} %>
-        <%= link_to 'Decline', booking_path(booking, booking_status: "Declined"), class: "btn btn-danger",
+        <%= link_to 'Decline', booking_path(booking, booking_status: "Declined"), class: "btn btn-danger btn-lg",
         method: :patch,
         data: { confirm: "Are you sure"} %>
       <% elsif booking.booking_status == "Accepted" %>
-        <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger",
+        <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger btn-lg",
         method: :patch,
         data: { confirm: "Are you sure"} %>
       <% else %>
-        <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger",
+        <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger btn-lg",
         method: :delete,
         data: { confirm: "Are you sure"} %>
       <% end %>
