--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,110 +1,9 @@
 <p><%= @user.email  %></p>
 
+<h3>Your Total earnings (past & present) are: <%= @earnings  %>€</h3>
 
 
-<div>
-  <div class="container">
-    <h3>Your Total earnings (past & present) are: <%= @earnings  %>€</h3>
-    <div class="row">
-      <div class="col-12 col-md-6 border p-2">
-        <div class="container">
-          <h2>My Bookings</h2>
-          <% @bookings.each do |booking| %>
-            <div class="card mb-3" style="max-width: 780px;">
-              <div class="row bg-light">
-                <div class="col-lg-6 col-xl-12 text-center">
-                  <% if booking.tank.photos.present? %>
-                    <%= cl_image_tag booking.tank.photos.first.key, height: 200, width: 200, crop: :fill%>
-                  <% else %>
-                    <%= cl_image_tag 'tank1_xkesh5', height: 200, width: 200, crop: :fill %>
-                  <% end %>
-                </div>
-
-                <div class="card-body col-lg-6 col-xl-12 pb-2">
-                  <h3 class="card-title">
-                    From <%= booking.from_date  %> to <%= booking.to_date %>
-                  </h3>
-                  <% total_days = (booking.to_date - booking.from_date) %>
-                  <p class="card-text">
-                    Total Days: <%= total_days.to_i %>
-                  </p>
-                  <p class="card-text">
-                    Tank: <%= link_to booking.tank.name, tank_path(booking.tank) %>
-                  </p>
-                  <p class="card-text">
-                    Total Price: <%= (booking.tank.price_per_day * total_days).to_i  %> €
-                  </p>
-                  <div class="row">
-                    <div class="p-3">
-                      <h3>
-                        <%= booking.booking_status %>
-                      </h3>
-                    </div>
-                    <div class="col-7 text-right">
-                      <% if booking.booking_status == "Canceled" %>
-                        <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger btn-lg",
-                          method: :delete,
-                          data: { confirm: "Are you sure"} %>
-                      <% else %>
-                      <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger btn-lg",
-                        method: :patch,
-                        data: { confirm: "Are you sure"} %>
-                      <% end %>
-                    </div>
-                  </div>
-                </div>
-
-              </div>
-            </div>
-         <% end %>
-        </div>
-      </div>
-      <div class="col-12 col-md-6 border p-2">
-        <h2>My tanks and their upcoming bookings (by other people)</h2>
-        <% any_bookings = false %>
-        <% @tanks.each do |tank| %>
-          <% if tank.bookings.present? %>
-            <% any_bookings = true %>
-            <div class="container">
-              <h3><%= tank.name  %></h3>
-              <% tank.bookings.each do |booking| %>
-                <div class="booking-card container">
-                  <p>Who wants to rent: <%= booking.user.email %></p>
-                  <% total_days = (booking.to_date - booking.from_date) %>
-                  <p>For <%= total_days.to_i %> Days and <%= (booking.tank.price_per_day * total_days).to_i %> €</p>
-                  <p>Between <%= booking.from_date  %> and <%= booking.to_date  %></p>
-                  <p><%= booking.booking_status  %></p>
-                  <% if booking.booking_status == "in Review" %>
-                    <%= link_to 'Accept', booking_path(booking, booking_status: "Accepted"), class: "btn btn-success btn-lg",
-                      method: :patch,
-                      data: { confirm: "Are you sure"} %>
-                    <%= link_to 'Decline', booking_path(booking, booking_status: "Declined"), class: "btn btn-danger btn-lg",
-                      method: :patch,
-                      data: { confirm: "Are you sure"} %>
-                  <% elsif booking.booking_status == "Accepted" %>
-                    <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger btn-lg",
-                      method: :patch,
-                      data: { confirm: "Are you sure"} %>
-                  <% else %>
-                    <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger btn-lg",
-                      method: :delete,
-                      data: { confirm: "Are you sure"} %>
-                  <% end %>
-                </div>
-              <% end %>
-            </div>
-          <% end %>
-        <% end %>
-        <% unless any_bookings %>
-          <h2>Bookings will be shown here.</h2>
-        <% end %>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
+<div class="container-fluid", style="display: flex">
   <div class="container">
     <h2>Your <%= link_to "Tanks", your_tanks_path() %></h2>
     <% @tanks.each do |tank| %>
@@ -112,8 +11,101 @@
         <%= link_to tank.name, tank_path(tank) %>
         <%= tank.description  %>
         <br>
-
+        
         <%= tank.price_per_day %> | <%= tank.capacity %>
       </div>
     <% end %>
   </div>
+
+  <div class="container">
+    <h2>My Bookings</h2>
+    <% @bookings.each do |booking| %>
+      <div class="card mb-3" style="max-width: 780px;">
+        <div class="row bg-light">
+          <div class="col-lg-12 col-xl-6 pl-0 pr-0">
+            <% if booking.tank.photos.present? %>
+              <%= cl_image_tag booking.tank.photos.first.key, height: 300, width: 300, crop: :fill%>
+            <% else %>
+              <%= cl_image_tag 'tank1_xkesh5', height: 300, width: 300, crop: :fill %>
+            <% end %>
+          </div>
+          
+            <div class="card-body col-lg-12 col-xl-6 mt-3">
+              <h3 class="card-title">
+                From <%= booking.from_date  %> to <%= booking.to_date %>
+              </h3>
+                <% total_days = (booking.to_date - booking.from_date) %>
+                <p class="card-text">
+                  Total Days: <%= total_days.to_i %>
+                </p>
+                <p class="card-text">
+                  Tank: <%= link_to booking.tank.name, tank_path(booking.tank) %>
+                </p>
+                <p class="card-text">
+                  Total Price: <%= (booking.tank.price_per_day * total_days).to_i  %> €
+                </p>
+                <div class="row">
+                  <div class="col-5">
+                    <h3>
+                      <%= booking.booking_status %>
+                    </h3>
+                  </div>
+                  <div class="col-7">
+                    <% if booking.booking_status == "Canceled" %>
+                      <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger btn-lg",
+                        method: :delete,
+                        data: { confirm: "Are you sure"} %>
+                    <% else %>
+                    <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger btn-lg",
+                      method: :patch,
+                      data: { confirm: "Are you sure"} %>
+                    <% end %>
+                  </div>
+                </div>
+            </div>
+          
+        </div>
+      </div>
+   <% end %>
+  </div>
+
+</div>
+
+<h2>My tanks and their upcoming bookings (by other people)</h2>
+<% any_bookings = false %>
+<% @tanks.each do |tank| %>
+  <% if tank.bookings.present? %>
+    <% any_bookings = true %>
+    <div class="container">
+    <h3><%= tank.name  %></h3>
+    <% tank.bookings.each do |booking| %>
+      <div class="booking-card container">
+        <p>Who wants to rent: <%= booking.user.email %></p>
+        <% total_days = (booking.to_date - booking.from_date) %>
+        <p>For <%= total_days.to_i %> Days and <%= (booking.tank.price_per_day * total_days).to_i %> €</p>
+        <p>Between <%= booking.from_date  %> and <%= booking.to_date  %></p>
+        <p><%= booking.booking_status  %></p>
+        <% if booking.booking_status == "in Review" %>
+          <%= link_to 'Accept', booking_path(booking, booking_status: "Accepted"), class: "btn btn-success btn-lg",
+            method: :patch,
+            data: { confirm: "Are you sure"} %>
+          <%= link_to 'Decline', booking_path(booking, booking_status: "Declined"), class: "btn btn-danger btn-lg",
+            method: :patch,
+            data: { confirm: "Are you sure"} %>
+        <% elsif booking.booking_status == "Accepted" %>
+          <%= link_to 'Cancel', booking_path(booking, booking_status: "Canceled"), class: "btn btn-danger btn-lg",
+            method: :patch,
+            data: { confirm: "Are you sure"} %>
+        <% else %>
+          <%= link_to 'Delete Booking', booking_path(booking, booking_status: "Canceled"), class: "btn btn-outline-danger btn-lg",
+            method: :delete,
+            data: { confirm: "Are you sure"} %>
+        <% end %>
+      </div>
+    <% end %>
+    </div>
+  <% end %>
+<% end %>
+<% unless any_bookings %>
+  <h2>Bookings will be shown here.</h2>
+<% end %>
