--- a/app/views/your_tanks/index.html.erb
+++ b/app/views/your_tanks/index.html.erb
@@ -1,8 +1,13 @@
-<p>all your tanks</p>
+<%= link_to "Dashboard", dashboard_path , class: "btn btn-outline-primary" %>
+<br>
+<%= link_to "New Tank", new_tank_path(@tank), class: "btn btn-outline-success"  %>
+<br>
+<br>
+<h2>All my tanks</h2>
+<br>
 <% @tanks.each do |tank| %>
   <div class="tank-card">
     <%= tank.name  %>
-    <%= tank.description  %>
     <br>
     <%= tank.price_per_day %> | <%= tank.capacity %>
     <%= link_to 'Edit', edit_tank_path(tank), class: "btn btn-outline-warning" %>
@@ -10,8 +15,9 @@
       method: :delete,
       data: { confirm: "Are you sure"} %> 
   </div>
+  <br>
 <% end %>
-<br>
+
 <%= link_to "New Tank", new_tank_path(@tank), class: "btn btn-outline-success"  %>
 <br>
 <%= link_to "Dashboard", dashboard_path , class: "btn btn-outline-primary" %>
